@@ -16,12 +16,10 @@
  */
 package org.operaton.bpm.engine.test.api.authorization.batch;
 
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.operaton.bpm.engine.authorization.Authorization.ANY;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
 
-import java.util.Arrays;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
@@ -48,7 +46,10 @@ import org.operaton.bpm.engine.test.api.runtime.migration.models.ProcessModels;
 import org.operaton.bpm.engine.test.util.ProcessEngineTestRule;
 import org.operaton.bpm.engine.test.util.ProvidedProcessEngineRule;
 
-import org.junit.*;
+import org.junit.After;
+import org.junit.Before;
+import org.junit.Rule;
+import org.junit.Test;
 import org.junit.rules.RuleChain;
 
 /**
@@ -87,12 +88,12 @@ public class HistoricBatchQueryAuthorizationTest {
 
     batch1 = engineRule.getRuntimeService()
       .newMigration(migrationPlan)
-      .processInstanceIds(Arrays.asList(pi.getId()))
+      .processInstanceIds(List.of(pi.getId()))
       .executeAsync();
 
     batch2 = engineRule.getRuntimeService()
         .newMigration(migrationPlan)
-        .processInstanceIds(Arrays.asList(pi.getId()))
+        .processInstanceIds(List.of(pi.getId()))
         .executeAsync();
   }
 
@@ -129,8 +130,8 @@ public class HistoricBatchQueryAuthorizationTest {
     authRule.disableAuthorization();
 
     // then
-    Assert.assertEquals(1, batches.size());
-    Assert.assertEquals(batch1.getId(), batches.get(0).getId());
+    assertThat(batches).hasSize(1);
+    assertThat(batches.get(0).getId()).isEqualTo(batch1.getId());
   }
 
   @Test
@@ -144,7 +145,7 @@ public class HistoricBatchQueryAuthorizationTest {
     authRule.disableAuthorization();
 
     // then
-    Assert.assertEquals(1, count);
+    assertThat(count).isEqualTo(1);
   }
 
   @Test
@@ -155,7 +156,7 @@ public class HistoricBatchQueryAuthorizationTest {
     authRule.disableAuthorization();
 
     // then
-    Assert.assertEquals(0, count);
+    assertThat(count).isZero();
   }
 
   @Test
@@ -169,7 +170,7 @@ public class HistoricBatchQueryAuthorizationTest {
     authRule.disableAuthorization();
 
     // then
-    Assert.assertEquals(2, batches.size());
+    assertThat(batches).hasSize(2);
   }
 
   @Test
@@ -184,7 +185,7 @@ public class HistoricBatchQueryAuthorizationTest {
     authRule.disableAuthorization();
 
     // then
-    Assert.assertEquals(2, batches.size());
+    assertThat(batches).hasSize(2);
   }
 
   @Test
@@ -199,7 +200,7 @@ public class HistoricBatchQueryAuthorizationTest {
     authRule.disableAuthorization();
 
     // then
-    Assert.assertTrue(batches.isEmpty());
+    assertThat(batches).isEmpty();
   }
 
   @Test
@@ -214,7 +215,7 @@ public class HistoricBatchQueryAuthorizationTest {
     authRule.disableAuthorization();
 
     // then
-    Assert.assertEquals(0L, batchCount);
+    assertThat(batchCount).isZero();
   }
 
   @Test
@@ -228,7 +229,7 @@ public class HistoricBatchQueryAuthorizationTest {
     CleanableHistoricBatchReportResult result = engineRule.getHistoryService().createCleanableHistoricBatchReport().singleResult();
     authRule.disableAuthorization();
 
-    assertNotNull(result);
+    assertThat(result).isNotNull();
     checkResultNumbers(result, 1, 1, 0);
   }
 
@@ -266,9 +267,9 @@ public class HistoricBatchQueryAuthorizationTest {
   }
 
   private void checkResultNumbers(CleanableHistoricBatchReportResult result, int expectedCleanable, int expectedFinished, Integer expectedTTL) {
-    assertEquals(expectedCleanable, result.getCleanableBatchesCount());
-    assertEquals(expectedFinished, result.getFinishedBatchesCount());
-    assertEquals(expectedTTL, result.getHistoryTimeToLive());
+    assertThat(result.getCleanableBatchesCount()).isEqualTo(expectedCleanable);
+    assertThat(result.getFinishedBatchesCount()).isEqualTo(expectedFinished);
+    assertThat(result.getHistoryTimeToLive()).isEqualTo(expectedTTL);
   }
 
 
@@ -284,7 +285,7 @@ public class HistoricBatchQueryAuthorizationTest {
 
      Batch batch = engineRule.getRuntimeService()
       .newMigration(plan)
-      .processInstanceIds(Arrays.asList(pi.getId()))
+      .processInstanceIds(List.of(pi.getId()))
       .executeAsync();
 
      return batch.getId();
