@@ -16,10 +16,10 @@
  */
 package org.operaton.bpm.engine.test.api.multitenancy.tenantcheck;
 
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.junit.Assert.assertEquals;
 
-import java.util.Arrays;
+import java.util.List;
 
 import org.operaton.bpm.engine.ProcessEngineException;
 import org.operaton.bpm.engine.test.ProcessEngineRule;
@@ -32,6 +32,7 @@ import org.junit.Before;
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.rules.RuleChain;
+
 /**
  *
  * @author Deivarayan Azhagappan
@@ -81,19 +82,20 @@ public class MultiTenancyExecutionVariableCmdsTenantCheckTest {
   @Test
   public void getExecutionVariableWithAuthenticatedTenant() {
 
-    engineRule.getIdentityService().setAuthentication("aUserId", null, Arrays.asList(TENANT_ONE));
+    engineRule.getIdentityService().setAuthentication("aUserId", null, List.of(TENANT_ONE));
 
     // then
-    assertEquals(VARIABLE_VALUE_1, engineRule.getRuntimeService().getVariable(processInstanceId, VARIABLE_1));
+    assertThat(engineRule.getRuntimeService().getVariable(processInstanceId, VARIABLE_1)).isEqualTo(VARIABLE_VALUE_1);
   }
 
   @Test
   public void getExecutionVariableWithNoAuthenticatedTenant() {
 
     engineRule.getIdentityService().setAuthentication("aUserId", null);
+    var runtimeService = engineRule.getRuntimeService();
 
     // when/then
-    assertThatThrownBy(() -> engineRule.getRuntimeService().getVariable(processInstanceId, VARIABLE_1))
+    assertThatThrownBy(() -> runtimeService.getVariable(processInstanceId, VARIABLE_1))
       .isInstanceOf(ProcessEngineException.class)
       .hasMessageContaining("Cannot read the process instance '"
           + processInstanceId +"' because it belongs to no authenticated tenant.");
@@ -107,7 +109,7 @@ public class MultiTenancyExecutionVariableCmdsTenantCheckTest {
     engineRule.getProcessEngineConfiguration().setTenantCheckEnabled(false);
 
     // then
-    assertEquals(VARIABLE_VALUE_1, engineRule.getRuntimeService().getVariable(processInstanceId, VARIABLE_1));
+    assertThat(engineRule.getRuntimeService().getVariable(processInstanceId, VARIABLE_1)).isEqualTo(VARIABLE_VALUE_1);
 
   }
 
@@ -115,19 +117,20 @@ public class MultiTenancyExecutionVariableCmdsTenantCheckTest {
   @Test
   public void getExecutionVariableTypedWithAuthenticatedTenant() {
 
-    engineRule.getIdentityService().setAuthentication("aUserId", null, Arrays.asList(TENANT_ONE));
+    engineRule.getIdentityService().setAuthentication("aUserId", null, List.of(TENANT_ONE));
 
     // then
-    assertEquals(VARIABLE_VALUE_1, engineRule.getRuntimeService().getVariableTyped(processInstanceId, VARIABLE_1).getValue());
+    assertThat(engineRule.getRuntimeService().getVariableTyped(processInstanceId, VARIABLE_1).getValue()).isEqualTo(VARIABLE_VALUE_1);
   }
 
   @Test
   public void getExecutionVariableTypedWithNoAuthenticatedTenant() {
 
     engineRule.getIdentityService().setAuthentication("aUserId", null);
+    var runtimeService = engineRule.getRuntimeService();
 
     // when/then
-    assertThatThrownBy(() -> engineRule.getRuntimeService().getVariableTyped(processInstanceId, VARIABLE_1))
+    assertThatThrownBy(() -> runtimeService.getVariableTyped(processInstanceId, VARIABLE_1))
       .isInstanceOf(ProcessEngineException.class)
       .hasMessageContaining("Cannot read the process instance '"
           + processInstanceId +"' because it belongs to no authenticated tenant.");
@@ -142,7 +145,7 @@ public class MultiTenancyExecutionVariableCmdsTenantCheckTest {
     engineRule.getProcessEngineConfiguration().setTenantCheckEnabled(false);
 
     // then
-    assertEquals(VARIABLE_VALUE_1, engineRule.getRuntimeService().getVariableTyped(processInstanceId, VARIABLE_1).getValue());
+    assertThat(engineRule.getRuntimeService().getVariableTyped(processInstanceId, VARIABLE_1).getValue()).isEqualTo(VARIABLE_VALUE_1);
 
   }
 
@@ -150,19 +153,20 @@ public class MultiTenancyExecutionVariableCmdsTenantCheckTest {
   @Test
   public void getExecutionVariablesWithAuthenticatedTenant() {
 
-    engineRule.getIdentityService().setAuthentication("aUserId", null, Arrays.asList(TENANT_ONE));
+    engineRule.getIdentityService().setAuthentication("aUserId", null, List.of(TENANT_ONE));
 
     // then
-    assertEquals(2, engineRule.getRuntimeService().getVariables(processInstanceId).size());
+    assertThat(engineRule.getRuntimeService().getVariables(processInstanceId)).hasSize(2);
   }
 
   @Test
   public void getExecutionVariablesWithNoAuthenticatedTenant() {
 
     engineRule.getIdentityService().setAuthentication("aUserId", null);
+    var runtimeService = engineRule.getRuntimeService();
 
     // when/then
-    assertThatThrownBy(() -> engineRule.getRuntimeService().getVariables(processInstanceId).size())
+    assertThatThrownBy(() -> runtimeService.getVariables(processInstanceId))
       .isInstanceOf(ProcessEngineException.class)
       .hasMessageContaining("Cannot read the process instance '"
           + processInstanceId +"' because it belongs to no authenticated tenant.");
@@ -176,7 +180,7 @@ public class MultiTenancyExecutionVariableCmdsTenantCheckTest {
     engineRule.getProcessEngineConfiguration().setTenantCheckEnabled(false);
 
     // then
-    assertEquals(2, engineRule.getRuntimeService().getVariables(processInstanceId).size());
+    assertThat(engineRule.getRuntimeService().getVariables(processInstanceId)).hasSize(2);
 
   }
 
@@ -184,20 +188,21 @@ public class MultiTenancyExecutionVariableCmdsTenantCheckTest {
   @Test
   public void setExecutionVariableWithAuthenticatedTenant() {
 
-    engineRule.getIdentityService().setAuthentication("aUserId", null, Arrays.asList(TENANT_ONE));
+    engineRule.getIdentityService().setAuthentication("aUserId", null, List.of(TENANT_ONE));
 
     // then
     engineRule.getRuntimeService().setVariable(processInstanceId, "newVariable", "newValue");
-    assertEquals(3, engineRule.getRuntimeService().getVariables(processInstanceId).size());
+    assertThat(engineRule.getRuntimeService().getVariables(processInstanceId)).hasSize(3);
   }
 
   @Test
   public void setExecutionVariableWithNoAuthenticatedTenant() {
 
     engineRule.getIdentityService().setAuthentication("aUserId", null);
+    var runtimeService = engineRule.getRuntimeService();
 
     // when/then
-    assertThatThrownBy(() -> engineRule.getRuntimeService().setVariable(processInstanceId, "newVariable", "newValue"))
+    assertThatThrownBy(() -> runtimeService.setVariable(processInstanceId, "newVariable", "newValue"))
       .isInstanceOf(ProcessEngineException.class)
       .hasMessageContaining("Cannot update the process instance '"
           + processInstanceId +"' because it belongs to no authenticated tenant.");
@@ -210,27 +215,28 @@ public class MultiTenancyExecutionVariableCmdsTenantCheckTest {
 
     engineRule.getProcessEngineConfiguration().setTenantCheckEnabled(false);
     engineRule.getRuntimeService().setVariable(processInstanceId, "newVariable", "newValue");
-    assertEquals(3, engineRule.getRuntimeService().getVariables(processInstanceId).size());
+    assertThat(engineRule.getRuntimeService().getVariables(processInstanceId)).hasSize(3);
   }
 
   // remove execution variable
   @Test
   public void removeExecutionVariableWithAuthenticatedTenant() {
 
-    engineRule.getIdentityService().setAuthentication("aUserId", null, Arrays.asList(TENANT_ONE));
+    engineRule.getIdentityService().setAuthentication("aUserId", null, List.of(TENANT_ONE));
     engineRule.getRuntimeService().removeVariable(processInstanceId, VARIABLE_1);
 
     // then
-    assertEquals(1, engineRule.getRuntimeService().getVariables(processInstanceId).size());
+    assertThat(engineRule.getRuntimeService().getVariables(processInstanceId)).hasSize(1);
   }
 
   @Test
   public void removeExecutionVariableWithNoAuthenticatedTenant() {
 
     engineRule.getIdentityService().setAuthentication("aUserId", null);
+    var runtimeService = engineRule.getRuntimeService();
 
     // when/then
-    assertThatThrownBy(() -> engineRule.getRuntimeService().removeVariable(processInstanceId, VARIABLE_1))
+    assertThatThrownBy(() -> runtimeService.removeVariable(processInstanceId, VARIABLE_1))
       .isInstanceOf(ProcessEngineException.class)
       .hasMessageContaining("Cannot update the process instance '"
           + processInstanceId +"' because it belongs to no authenticated tenant.");
@@ -246,6 +252,6 @@ public class MultiTenancyExecutionVariableCmdsTenantCheckTest {
     engineRule.getRuntimeService().removeVariable(processInstanceId, VARIABLE_1);
 
     // then
-    assertEquals(1, engineRule.getRuntimeService().getVariables(processInstanceId).size());
+    assertThat(engineRule.getRuntimeService().getVariables(processInstanceId)).hasSize(1);
   }
 }
