@@ -16,10 +16,10 @@
  */
 package org.operaton.bpm.engine.test.api.multitenancy.tenantcheck;
 
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.junit.Assert.assertEquals;
 
-import java.util.Arrays;
+import java.util.List;
 
 import org.operaton.bpm.engine.ProcessEngineException;
 import org.operaton.bpm.engine.runtime.ProcessInstance;
@@ -76,22 +76,23 @@ public class MultiTenancyFormVariablesCmdsTenantCheckTest {
   @Test
   public void testGetStartFormVariablesWithAuthenticatedTenant() {
 
-    engineRule.getIdentityService().setAuthentication("aUserId", null, Arrays.asList(TENANT_ONE));
+    engineRule.getIdentityService().setAuthentication("aUserId", null, List.of(TENANT_ONE));
 
-    assertEquals(4, engineRule.getFormService().getStartFormVariables(instance.getProcessDefinitionId()).size());
+    assertThat(engineRule.getFormService().getStartFormVariables(instance.getProcessDefinitionId())).hasSize(4);
 
   }
 
   @Test
   public void testGetStartFormVariablesWithNoAuthenticatedTenant() {
-
     engineRule.getIdentityService().setAuthentication("aUserId", null);
+    String processDefinitionId = instance.getProcessDefinitionId();
+    var formService = engineRule.getFormService();
 
     // when/then
-    assertThatThrownBy(() -> engineRule.getFormService().getStartFormVariables(instance.getProcessDefinitionId()))
+    assertThatThrownBy(() -> formService.getStartFormVariables(processDefinitionId))
       .isInstanceOf(ProcessEngineException.class)
       .hasMessageContaining("Cannot get the process definition '"
-          + instance.getProcessDefinitionId() +"' because it belongs to no authenticated tenant.");
+          + processDefinitionId +"' because it belongs to no authenticated tenant.");
 
   }
 
@@ -101,18 +102,18 @@ public class MultiTenancyFormVariablesCmdsTenantCheckTest {
     engineRule.getIdentityService().setAuthentication("aUserId", null);
     engineRule.getProcessEngineConfiguration().setTenantCheckEnabled(false);
 
-    assertEquals(4, engineRule.getFormService().getStartFormVariables(instance.getProcessDefinitionId()).size());
+    assertThat(engineRule.getFormService().getStartFormVariables(instance.getProcessDefinitionId())).hasSize(4);
 
   }
 
   @Test
   public void testGetTaskFormVariablesWithAuthenticatedTenant() {
 
-    engineRule.getIdentityService().setAuthentication("aUserId", null, Arrays.asList(TENANT_ONE));
+    engineRule.getIdentityService().setAuthentication("aUserId", null, List.of(TENANT_ONE));
 
     Task task = engineRule.getTaskService().createTaskQuery().singleResult();
 
-    assertEquals(2, engineRule.getFormService().getTaskFormVariables(task.getId()).size());
+    assertThat(engineRule.getFormService().getTaskFormVariables(task.getId())).hasSize(2);
 
   }
 
@@ -120,14 +121,16 @@ public class MultiTenancyFormVariablesCmdsTenantCheckTest {
   public void testGetTaskFormVariablesWithNoAuthenticatedTenant() {
 
     Task task = engineRule.getTaskService().createTaskQuery().singleResult();
+    String taskId = task.getId();
 
     engineRule.getIdentityService().setAuthentication("aUserId", null);
+    var formService = engineRule.getFormService();
 
     // when/then
-    assertThatThrownBy(() -> engineRule.getFormService().getTaskFormVariables(task.getId()))
+    assertThatThrownBy(() -> formService.getTaskFormVariables(taskId))
       .isInstanceOf(ProcessEngineException.class)
       .hasMessageContaining("Cannot read the task '"
-          + task.getId() +"' because it belongs to no authenticated tenant.");
+          + taskId +"' because it belongs to no authenticated tenant.");
 
   }
 
@@ -139,7 +142,7 @@ public class MultiTenancyFormVariablesCmdsTenantCheckTest {
     engineRule.getIdentityService().setAuthentication("aUserId", null);
     engineRule.getProcessEngineConfiguration().setTenantCheckEnabled(false);
 
-    assertEquals(2, engineRule.getFormService().getTaskFormVariables(task.getId()).size());
+    assertThat(engineRule.getFormService().getTaskFormVariables(task.getId())).hasSize(2);
 
   }
 }
