@@ -18,11 +18,10 @@ package org.operaton.bpm.engine.test.api.multitenancy.tenantcheck;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.junit.Assert.assertEquals;
 
-import java.util.Arrays;
 import java.util.Calendar;
 import java.util.Date;
+import java.util.List;
 
 import org.operaton.bpm.engine.IdentityService;
 import org.operaton.bpm.engine.ManagementService;
@@ -70,7 +69,7 @@ public class MultiTenancyJobCmdsTenantCheckTest {
     .endEvent()
     .done();
 
-  BpmnModelInstance BPMN_NO_FAIL_PROCESS = Bpmn.createExecutableProcess("noFail")
+  static final BpmnModelInstance BPMN_NO_FAIL_PROCESS = Bpmn.createExecutableProcess("noFail")
     .startEvent()
      .userTask("aUserTask")
        .boundaryEvent("timerEvent")
@@ -100,13 +99,13 @@ public class MultiTenancyJobCmdsTenantCheckTest {
       .processInstanceId(processInstance.getId())
       .singleResult();
 
-    identityService.setAuthentication("aUserId", null,  Arrays.asList(TENANT_ONE));
+    identityService.setAuthentication("aUserId", null, List.of(TENANT_ONE));
     managementService.setJobRetries(timerJob.getId(), 5);
 
-    assertEquals(5, managementService.createJobQuery()
-      .processInstanceId(processInstance.getId())
-      .singleResult()
-      .getRetries());
+    assertThat(managementService.createJobQuery()
+        .processInstanceId(processInstance.getId())
+        .singleResult()
+        .getRetries()).isEqualTo(5);
   }
 
   @Test
@@ -115,13 +114,14 @@ public class MultiTenancyJobCmdsTenantCheckTest {
     Job timerJob = managementService.createJobQuery()
       .processInstanceId(processInstance.getId())
       .singleResult();
+    String timerJobId = timerJob.getId();
 
     identityService.setAuthentication("aUserId", null);
 
     // when/then
-    assertThatThrownBy(() -> managementService.setJobRetries(timerJob.getId(), 5))
+    assertThatThrownBy(() -> managementService.setJobRetries(timerJobId, 5))
       .isInstanceOf(ProcessEngineException.class)
-      .hasMessageContaining("Cannot update the job '"+ timerJob.getId()
+      .hasMessageContaining("Cannot update the job '"+ timerJobId
       +"' because it belongs to no authenticated tenant.");
 
   }
@@ -139,10 +139,10 @@ public class MultiTenancyJobCmdsTenantCheckTest {
     managementService.setJobRetries(timerJob.getId(), 5);
 
     // then
-    assertEquals(5, managementService.createJobQuery()
-    .processInstanceId(processInstance.getId())
-    .singleResult()
-    .getRetries());
+    assertThat(managementService.createJobQuery()
+        .processInstanceId(processInstance.getId())
+        .singleResult()
+        .getRetries()).isEqualTo(5);
 
   }
 
@@ -156,13 +156,13 @@ public class MultiTenancyJobCmdsTenantCheckTest {
 
     managementService.setJobRetries(jobId, 0);
 
-    identityService.setAuthentication("aUserId", null,  Arrays.asList(TENANT_ONE));
+    identityService.setAuthentication("aUserId", null, List.of(TENANT_ONE));
     // sets the retries for failed jobs - That's the reason why job retries are made 0 in the above step
     managementService.setJobRetriesByJobDefinitionId(jobDefinition.getId(), 1);
 
     // then
-    assertEquals(1, selectJobByProcessInstanceId(processInstance.getId())
-      .getRetries());
+    assertThat(selectJobByProcessInstanceId(processInstance.getId())
+        .getRetries()).isEqualTo(1);
 
   }
 
@@ -170,6 +170,7 @@ public class MultiTenancyJobCmdsTenantCheckTest {
   public void testSetJobRetriesDefinitionWithNoAuthenticatedTenant() {
 
     JobDefinition jobDefinition = managementService.createJobDefinitionQuery().list().get(0);
+    String jobDefinitionId = jobDefinition.getId();
 
     String jobId = selectJobByProcessInstanceId(processInstance.getId()).getId();
 
@@ -177,7 +178,7 @@ public class MultiTenancyJobCmdsTenantCheckTest {
     identityService.setAuthentication("aUserId", null);
 
     // when/then
-    assertThatThrownBy(() -> managementService.setJobRetriesByJobDefinitionId(jobDefinition.getId(), 1))
+    assertThatThrownBy(() -> managementService.setJobRetriesByJobDefinitionId(jobDefinitionId, 1))
       .isInstanceOf(ProcessEngineException.class)
       .hasMessageContaining("Cannot update the process definition '"
           + jobDefinition.getProcessDefinitionId() + "' because it belongs to no authenticated tenant.");
@@ -196,7 +197,7 @@ public class MultiTenancyJobCmdsTenantCheckTest {
 
     managementService.setJobRetriesByJobDefinitionId(jobDefinition.getId(), 1);
     // then
-    assertEquals(1, selectJobByProcessInstanceId(processInstance.getId()).getRetries());
+    assertThat(selectJobByProcessInstanceId(processInstance.getId()).getRetries()).isEqualTo(1);
 
   }
 
@@ -205,30 +206,33 @@ public class MultiTenancyJobCmdsTenantCheckTest {
   public void testSetJobDueDateWithAuthenticatedTenant() {
     Job timerJob = managementService.createJobQuery().processInstanceId(processInstance.getId()).singleResult();
 
-    assertEquals(0, managementService.createJobQuery().duedateLowerThan(new Date()).count());
+    assertThat(managementService.createJobQuery().duedateLowerThan(new Date()).count()).isZero();
 
     Calendar cal = Calendar.getInstance();
     cal.setTime(new Date());
     cal.add(Calendar.DATE, -3);
 
-    identityService.setAuthentication("aUserId", null,  Arrays.asList(TENANT_ONE));
+    identityService.setAuthentication("aUserId", null, List.of(TENANT_ONE));
     managementService.setJobDuedate(timerJob.getId(), cal.getTime());
 
     // then
-    assertEquals(1, managementService.createJobQuery()
-      .duedateLowerThan(new Date()).count());
+    assertThat(managementService.createJobQuery()
+        .duedateLowerThan(new Date()).count()).isEqualTo(1);
   }
 
   @Test
   public void testSetJobDueDateWithNoAuthenticatedTenant() {
+    // given
     Job timerJob = managementService.createJobQuery().processInstanceId(processInstance.getId()).singleResult();
+    String timerJobId = timerJob.getId();
+    Date duedate = new Date();
 
     identityService.setAuthentication("aUserId", null);
 
     // when/then
-    assertThatThrownBy(() -> managementService.setJobDuedate(timerJob.getId(), new Date()))
+    assertThatThrownBy(() -> managementService.setJobDuedate(timerJobId, duedate))
       .isInstanceOf(ProcessEngineException.class)
-      .hasMessageContaining("Cannot update the job '" + timerJob.getId() +"' because it belongs to no authenticated tenant.");
+      .hasMessageContaining("Cannot update the job '" + timerJobId +"' because it belongs to no authenticated tenant.");
 
   }
 
@@ -245,8 +249,8 @@ public class MultiTenancyJobCmdsTenantCheckTest {
 
     managementService.setJobDuedate(timerJob.getId(), cal.getTime());
     // then
-    assertEquals(1, managementService.createJobQuery()
-      .duedateLowerThan(new Date()).count());
+    assertThat(managementService.createJobQuery()
+        .duedateLowerThan(new Date()).count()).isEqualTo(1);
 
   }
 
@@ -255,23 +259,25 @@ public class MultiTenancyJobCmdsTenantCheckTest {
   public void testSetJobPriorityWithAuthenticatedTenant() {
     Job timerJob = managementService.createJobQuery().processInstanceId(processInstance.getId()).singleResult();
 
-    identityService.setAuthentication("aUserId", null,  Arrays.asList(TENANT_ONE));
+    identityService.setAuthentication("aUserId", null, List.of(TENANT_ONE));
     managementService.setJobPriority(timerJob.getId(), 5);
 
     // then
-    assertEquals(1, managementService.createJobQuery().priorityHigherThanOrEquals(5).count());
+    assertThat(managementService.createJobQuery().priorityHigherThanOrEquals(5).count()).isEqualTo(1);
   }
 
   @Test
   public void testSetJobPriorityWithNoAuthenticatedTenant() {
+    // given
     Job timerJob = managementService.createJobQuery().processInstanceId(processInstance.getId()).singleResult();
+    String timerJobId = timerJob.getId();
 
     identityService.setAuthentication("aUserId", null);
 
     // when/then
-    assertThatThrownBy(() -> managementService.setJobPriority(timerJob.getId(), 5))
+    assertThatThrownBy(() -> managementService.setJobPriority(timerJobId, 5))
       .isInstanceOf(ProcessEngineException.class)
-      .hasMessageContaining("Cannot update the job '"+ timerJob.getId() + "' because it belongs to no authenticated tenant.");
+      .hasMessageContaining("Cannot update the job '"+ timerJobId + "' because it belongs to no authenticated tenant.");
   }
 
   @Test
@@ -283,14 +289,14 @@ public class MultiTenancyJobCmdsTenantCheckTest {
 
     managementService.setJobPriority(timerJob.getId(), 5);
     // then
-    assertEquals(1, managementService.createJobQuery().priorityHigherThanOrEquals(5).count());
+    assertThat(managementService.createJobQuery().priorityHigherThanOrEquals(5).count()).isEqualTo(1);
   }
 
   // setOverridingJobPriorityForJobDefinition without cascade
   @Test
   public void testSetOverridingJobPriorityWithAuthenticatedTenant() {
     JobDefinition jobDefinition = managementService.createJobDefinitionQuery().list().get(0);
-    identityService.setAuthentication("aUserId", null,  Arrays.asList(TENANT_ONE));
+    identityService.setAuthentication("aUserId", null, List.of(TENANT_ONE));
 
     managementService.setOverridingJobPriorityForJobDefinition(jobDefinition.getId(), 1701);
 
@@ -305,11 +311,12 @@ public class MultiTenancyJobCmdsTenantCheckTest {
     JobDefinition jobDefinition = managementService
       .createJobDefinitionQuery()
       .list().get(0);
+    String jobDefinitionId = jobDefinition.getId();
 
     identityService.setAuthentication("aUserId", null);
 
     // when/then
-    assertThatThrownBy(() -> managementService.setOverridingJobPriorityForJobDefinition(jobDefinition.getId(), 1701))
+    assertThatThrownBy(() -> managementService.setOverridingJobPriorityForJobDefinition(jobDefinitionId, 1701))
       .isInstanceOf(ProcessEngineException.class)
       .hasMessageContaining("Cannot update the process definition '"
           + jobDefinition.getProcessDefinitionId() +"' because it belongs to no authenticated tenant.");
@@ -336,7 +343,7 @@ public class MultiTenancyJobCmdsTenantCheckTest {
   @Test
   public void testSetOverridingJobPriorityWithCascadeAndAuthenticatedTenant() {
     JobDefinition jobDefinition = managementService.createJobDefinitionQuery().list().get(0);
-    identityService.setAuthentication("aUserId", null,  Arrays.asList(TENANT_ONE));
+    identityService.setAuthentication("aUserId", null, List.of(TENANT_ONE));
 
     managementService.setOverridingJobPriorityForJobDefinition(jobDefinition.getId(), 1701, true);
 
@@ -348,14 +355,16 @@ public class MultiTenancyJobCmdsTenantCheckTest {
 
   @Test
   public void testSetOverridingJobPriorityWithCascadeAndNoAuthenticatedTenant() {
+    // given
     JobDefinition jobDefinition = managementService
       .createJobDefinitionQuery()
       .list().get(0);
+    String jobDefinitionId = jobDefinition.getId();
 
     identityService.setAuthentication("aUserId", null);
 
     // when/then
-    assertThatThrownBy(() -> managementService.setOverridingJobPriorityForJobDefinition(jobDefinition.getId(), 1701, true))
+    assertThatThrownBy(() -> managementService.setOverridingJobPriorityForJobDefinition(jobDefinitionId, 1701, true))
       .isInstanceOf(ProcessEngineException.class)
       .hasMessageContaining("Cannot update the process definition '"
           + jobDefinition.getProcessDefinitionId() +"' because it belongs to no authenticated tenant.");
@@ -389,7 +398,7 @@ public class MultiTenancyJobCmdsTenantCheckTest {
       .jobDefinitionId(jobDefinition.getId()).singleResult()
       .getOverridingJobPriority()).isEqualTo(1701L);
 
-    identityService.setAuthentication("aUserId", null,  Arrays.asList(TENANT_ONE));
+    identityService.setAuthentication("aUserId", null, List.of(TENANT_ONE));
     managementService.clearOverridingJobPriorityForJobDefinition(jobDefinition.getId());
 
     // then
@@ -401,14 +410,16 @@ public class MultiTenancyJobCmdsTenantCheckTest {
 
   @Test
   public void testClearOverridingJobPriorityWithNoAuthenticatedTenant() {
+    // given
     JobDefinition jobDefinition = managementService.createJobDefinitionQuery().list().get(0);
+    String jobDefinitionId = jobDefinition.getId();
 
-    managementService.setOverridingJobPriorityForJobDefinition(jobDefinition.getId(), 1701);
+    managementService.setOverridingJobPriorityForJobDefinition(jobDefinitionId, 1701);
 
     identityService.setAuthentication("aUserId", null);
 
     // when/then
-    assertThatThrownBy(() -> managementService.clearOverridingJobPriorityForJobDefinition(jobDefinition.getId()))
+    assertThatThrownBy(() -> managementService.clearOverridingJobPriorityForJobDefinition(jobDefinitionId))
       .isInstanceOf(ProcessEngineException.class)
       .hasMessageContaining("Cannot update the process definition '"
           + jobDefinition.getProcessDefinitionId() +"' because it belongs to no authenticated tenant.");
@@ -447,7 +458,7 @@ public class MultiTenancyJobCmdsTenantCheckTest {
       .singleResult()
       .getId();
 
-    identityService.setAuthentication("aUserId", null,  Arrays.asList(TENANT_ONE));
+    identityService.setAuthentication("aUserId", null, List.of(TENANT_ONE));
     assertThat(managementService.getJobExceptionStacktrace(timerJobId)).isNotNull();
   }
 
@@ -504,13 +515,13 @@ public class MultiTenancyJobCmdsTenantCheckTest {
       .singleResult()
       .getId();
 
-    identityService.setAuthentication("aUserId", null,  Arrays.asList(TENANT_ONE));
+    identityService.setAuthentication("aUserId", null, List.of(TENANT_ONE));
     managementService.deleteJob(timerJobId);
 
     // then
-    assertEquals(0, managementService.createJobQuery()
-      .processInstanceId(processInstance.getId())
-      .count());
+    assertThat(managementService.createJobQuery()
+        .processInstanceId(processInstance.getId())
+        .count()).isZero();
   }
 
   @Test
@@ -542,9 +553,9 @@ public class MultiTenancyJobCmdsTenantCheckTest {
     managementService.deleteJob(timerJobId);
 
     // then
-    assertEquals(0, managementService.createJobQuery()
-      .processInstanceId(processInstance.getId())
-      .count());
+    assertThat(managementService.createJobQuery()
+        .processInstanceId(processInstance.getId())
+        .count()).isZero();
   }
 
   //executeJobs
@@ -559,18 +570,18 @@ public class MultiTenancyJobCmdsTenantCheckTest {
       .createTaskQuery()
       .processInstanceId(noFailProcessInstanceId);
 
-    assertEquals(1, taskQuery.list().size());
+    assertThat(taskQuery.list()).hasSize(1);
 
     String timerJobId = managementService.createJobQuery()
       .processInstanceId(noFailProcessInstanceId)
       .singleResult()
       .getId();
 
-    identityService.setAuthentication("aUserId", null,  Arrays.asList(TENANT_ONE));
+    identityService.setAuthentication("aUserId", null, List.of(TENANT_ONE));
     managementService.executeJob(timerJobId);
 
     // then
-    assertEquals(0, taskQuery.list().size());
+    assertThat(taskQuery.list()).isEmpty();
   }
 
   @Test
@@ -617,14 +628,13 @@ public class MultiTenancyJobCmdsTenantCheckTest {
       .processInstanceId(noFailProcessInstanceId);
 
     // then
-    assertEquals(0, taskQuery.list().size());
+    assertThat(taskQuery.list()).isEmpty();
   }
 
   protected Job selectJobByProcessInstanceId(String processInstanceId) {
-    Job job = managementService
+    return managementService
         .createJobQuery()
         .processInstanceId(processInstanceId)
         .singleResult();
-    return job;
   }
 }
