@@ -16,14 +16,13 @@
  */
 package org.operaton.bpm.engine.test.api.multitenancy.tenantcheck;
 
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
 
-import java.util.Arrays;
+import java.util.List;
 
 import org.operaton.bpm.engine.ProcessEngineException;
+import org.operaton.bpm.engine.RuntimeService;
 import org.operaton.bpm.engine.test.ProcessEngineRule;
 import org.operaton.bpm.engine.test.util.ProcessEngineTestRule;
 import org.operaton.bpm.engine.test.util.ProvidedProcessEngineRule;
@@ -74,24 +73,24 @@ public class MultiTenancyProcessInstanceCmdsTenantCheckTest {
   @Test
   public void deleteProcessInstanceWithAuthenticatedTenant() {
 
-    engineRule.getIdentityService().setAuthentication("aUserId", null, Arrays.asList(TENANT_ONE));
+    engineRule.getIdentityService().setAuthentication("aUserId", null, List.of(TENANT_ONE));
 
     engineRule.getRuntimeService().deleteProcessInstance(processInstanceId, null);
 
-    assertEquals(0, engineRule.getRuntimeService()
-      .createProcessInstanceQuery()
-      .processInstanceId(processInstanceId)
-      .list()
-      .size());
+    assertThat(engineRule.getRuntimeService()
+        .createProcessInstanceQuery()
+        .processInstanceId(processInstanceId)
+        .list()).isEmpty();
   }
 
   @Test
   public void deleteProcessInstanceWithNoAuthenticatedTenant() {
 
     engineRule.getIdentityService().setAuthentication("aUserId", null);
+    RuntimeService runtimeService = engineRule.getRuntimeService();
 
     // when/then
-    assertThatThrownBy(() -> engineRule.getRuntimeService().deleteProcessInstance(processInstanceId, null))
+    assertThatThrownBy(() -> runtimeService.deleteProcessInstance(processInstanceId, null))
       .isInstanceOf(ProcessEngineException.class)
       .hasMessageContaining("Cannot delete the process instance '"
           + processInstanceId +"' because it belongs to no authenticated tenant.");
@@ -107,20 +106,19 @@ public class MultiTenancyProcessInstanceCmdsTenantCheckTest {
     //then
     engineRule.getRuntimeService().deleteProcessInstance(processInstanceId, null);
 
-    assertEquals(0, engineRule.getRuntimeService()
-      .createProcessInstanceQuery()
-      .processInstanceId(processInstanceId)
-      .list()
-      .size());
+    assertThat(engineRule.getRuntimeService()
+        .createProcessInstanceQuery()
+        .processInstanceId(processInstanceId)
+        .list()).isEmpty();
   }
 
   // modify instances
   @Test
   public void modifyProcessInstanceWithAuthenticatedTenant() {
 
-    assertNotNull(engineRule.getRuntimeService().getActivityInstance(processInstanceId));
+    assertThat(engineRule.getRuntimeService().getActivityInstance(processInstanceId)).isNotNull();
 
-    engineRule.getIdentityService().setAuthentication("aUserId", null, Arrays.asList(TENANT_ONE));
+    engineRule.getIdentityService().setAuthentication("aUserId", null, List.of(TENANT_ONE));
 
     // when
     engineRule.getRuntimeService()
@@ -128,19 +126,19 @@ public class MultiTenancyProcessInstanceCmdsTenantCheckTest {
     .cancelAllForActivity("task")
     .execute();
 
-    assertNull(engineRule.getRuntimeService().getActivityInstance(processInstanceId));
+    assertThat(engineRule.getRuntimeService().getActivityInstance(processInstanceId)).isNull();
   }
 
   @Test
   public void modifyProcessInstanceWithNoAuthenticatedTenant() {
 
     engineRule.getIdentityService().setAuthentication("aUserId", null);
+    var processInstanceModificationBuilder = engineRule.getRuntimeService()
+      .createProcessInstanceModification(processInstanceId)
+      .cancelAllForActivity("task");
 
     // when/then
-    assertThatThrownBy(() -> engineRule.getRuntimeService()
-        .createProcessInstanceModification(processInstanceId)
-        .cancelAllForActivity("task")
-        .execute())
+    assertThatThrownBy(processInstanceModificationBuilder::execute)
       .isInstanceOf(ProcessEngineException.class)
       .hasMessageContaining("Cannot update the process instance '"
           + processInstanceId +"' because it belongs to no authenticated tenant.");
@@ -150,9 +148,9 @@ public class MultiTenancyProcessInstanceCmdsTenantCheckTest {
   @Test
   public void modifyProcessInstanceWithDisabledTenantCheck() {
 
-    assertNotNull(engineRule.getRuntimeService().getActivityInstance(processInstanceId));
+    assertThat(engineRule.getRuntimeService().getActivityInstance(processInstanceId)).isNotNull();
 
-    engineRule.getIdentityService().setAuthentication("aUserId", null, Arrays.asList(TENANT_ONE));
+    engineRule.getIdentityService().setAuthentication("aUserId", null, List.of(TENANT_ONE));
     engineRule.getProcessEngineConfiguration().setTenantCheckEnabled(false);
 
     // when
@@ -161,6 +159,6 @@ public class MultiTenancyProcessInstanceCmdsTenantCheckTest {
     .cancelAllForActivity("task")
     .execute();
 
-    assertNull(engineRule.getRuntimeService().getActivityInstance(processInstanceId));
+    assertThat(engineRule.getRuntimeService().getActivityInstance(processInstanceId)).isNull();
   }
 }
