@@ -17,10 +17,9 @@
 package org.operaton.bpm.engine.test.api.runtime;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.Assert.assertEquals;
+import static org.assertj.core.api.Assertions.fail;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
@@ -43,7 +42,6 @@ import org.operaton.bpm.engine.test.util.ProvidedProcessEngineRule;
 import org.operaton.bpm.model.bpmn.Bpmn;
 import org.operaton.bpm.model.bpmn.BpmnModelInstance;
 import org.junit.After;
-import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Rule;
 import org.junit.Test;
@@ -117,34 +115,34 @@ public class ModificationUserOperationLogTest {
             .createUserOperationLogQuery()
             .operationType(UserOperationLogEntry.OPERATION_TYPE_MODIFY_PROCESS_INSTANCE)
             .list();
-    Assert.assertEquals(2, opLogEntries.size());
+    assertThat(opLogEntries).hasSize(2);
 
     Map<String, UserOperationLogEntry> entries = asMap(opLogEntries);
 
 
     UserOperationLogEntry asyncEntry = entries.get("async");
-    Assert.assertNotNull(asyncEntry);
-    Assert.assertEquals("ProcessInstance", asyncEntry.getEntityType());
-    Assert.assertEquals("ModifyProcessInstance", asyncEntry.getOperationType());
-    Assert.assertEquals(processDefinition.getId(), asyncEntry.getProcessDefinitionId());
-    Assert.assertEquals(processDefinition.getKey(), asyncEntry.getProcessDefinitionKey());
-    Assert.assertNull(asyncEntry.getProcessInstanceId());
-    Assert.assertNull(asyncEntry.getOrgValue());
-    Assert.assertEquals("true", asyncEntry.getNewValue());
-    Assert.assertEquals(UserOperationLogEntry.CATEGORY_OPERATOR, asyncEntry.getCategory());
+    assertThat(asyncEntry).isNotNull();
+    assertThat(asyncEntry.getEntityType()).isEqualTo("ProcessInstance");
+    assertThat(asyncEntry.getOperationType()).isEqualTo("ModifyProcessInstance");
+    assertThat(asyncEntry.getProcessDefinitionId()).isEqualTo(processDefinition.getId());
+    assertThat(asyncEntry.getProcessDefinitionKey()).isEqualTo(processDefinition.getKey());
+    assertThat(asyncEntry.getProcessInstanceId()).isNull();
+    assertThat(asyncEntry.getOrgValue()).isNull();
+    assertThat(asyncEntry.getNewValue()).isEqualTo("true");
+    assertThat(asyncEntry.getCategory()).isEqualTo(UserOperationLogEntry.CATEGORY_OPERATOR);
 
     UserOperationLogEntry numInstancesEntry = entries.get("nrOfInstances");
-    Assert.assertNotNull(numInstancesEntry);
-    Assert.assertEquals("ProcessInstance", numInstancesEntry.getEntityType());
-    Assert.assertEquals("ModifyProcessInstance", numInstancesEntry.getOperationType());
-    Assert.assertEquals(processDefinition.getId(), numInstancesEntry.getProcessDefinitionId());
-    Assert.assertEquals(processDefinition.getKey(), numInstancesEntry.getProcessDefinitionKey());
-    Assert.assertNull(numInstancesEntry.getProcessInstanceId());
-    Assert.assertNull(numInstancesEntry.getOrgValue());
-    Assert.assertEquals("10", numInstancesEntry.getNewValue());
-    Assert.assertEquals(UserOperationLogEntry.CATEGORY_OPERATOR, numInstancesEntry.getCategory());
+    assertThat(numInstancesEntry).isNotNull();
+    assertThat(numInstancesEntry.getEntityType()).isEqualTo("ProcessInstance");
+    assertThat(numInstancesEntry.getOperationType()).isEqualTo("ModifyProcessInstance");
+    assertThat(numInstancesEntry.getProcessDefinitionId()).isEqualTo(processDefinition.getId());
+    assertThat(numInstancesEntry.getProcessDefinitionKey()).isEqualTo(processDefinition.getKey());
+    assertThat(numInstancesEntry.getProcessInstanceId()).isNull();
+    assertThat(numInstancesEntry.getOrgValue()).isNull();
+    assertThat(numInstancesEntry.getNewValue()).isEqualTo("10");
+    assertThat(numInstancesEntry.getCategory()).isEqualTo(UserOperationLogEntry.CATEGORY_OPERATOR);
 
-    Assert.assertEquals(asyncEntry.getOperationId(), numInstancesEntry.getOperationId());
+    assertThat(numInstancesEntry.getOperationId()).isEqualTo(asyncEntry.getOperationId());
   }
 
   @Test
@@ -156,7 +154,7 @@ public class ModificationUserOperationLogTest {
 
     Batch batch = runtimeService.createModification(processDefinition.getId())
       .startAfterActivity("user2")
-      .processInstanceIds(Arrays.asList(processInstance.getId()))
+      .processInstanceIds(List.of(processInstance.getId()))
       .executeAsync();
 
     helper.completeSeedJobs(batch);
@@ -167,7 +165,7 @@ public class ModificationUserOperationLogTest {
     identityService.clearAuthentication();
 
     // then
-    Assert.assertEquals(0, historyService.createUserOperationLogQuery().entityType(EntityTypes.PROCESS_INSTANCE).count());
+    assertThat(historyService.createUserOperationLogQuery().entityType(EntityTypes.PROCESS_INSTANCE).count()).isZero();
   }
 
   @Test
@@ -179,14 +177,14 @@ public class ModificationUserOperationLogTest {
 
     runtimeService.createModification(processDefinition.getId())
       .cancelAllForActivity("user1")
-      .processInstanceIds(Arrays.asList(processInstance.getId()))
+      .processInstanceIds(List.of(processInstance.getId()))
       .executeAsync();
 
     // when
     testRule.waitForJobExecutorToProcessAllJobs(5000L);
 
     // then
-    Assert.assertEquals(0, historyService.createUserOperationLogQuery().count());
+    assertThat(historyService.createUserOperationLogQuery().count()).isZero();
   }
 
   @Test
@@ -202,7 +200,7 @@ public class ModificationUserOperationLogTest {
     // when
     runtimeService.createModification(processDefinition.getId())
         .cancelAllForActivity("user1")
-        .processInstanceIds(Arrays.asList(processInstance.getId()))
+        .processInstanceIds(List.of(processInstance.getId()))
         .setAnnotation(annotation)
         .execute();
 
@@ -212,17 +210,17 @@ public class ModificationUserOperationLogTest {
     List<UserOperationLogEntry> opLogEntries = historyService.createUserOperationLogQuery()
         .operationType(UserOperationLogEntry.OPERATION_TYPE_MODIFY_PROCESS_INSTANCE)
         .list();
-    assertEquals(2, opLogEntries.size());
+    assertThat(opLogEntries).hasSize(2);
 
     Map<String, UserOperationLogEntry> entries = asMap(opLogEntries);
 
     UserOperationLogEntry asyncEntry = entries.get("async");
-    Assert.assertNotNull(asyncEntry);
-    assertEquals(annotation, asyncEntry.getAnnotation());
+    assertThat(asyncEntry).isNotNull();
+    assertThat(asyncEntry.getAnnotation()).isEqualTo(annotation);
 
     UserOperationLogEntry numInstancesEntry = entries.get("nrOfInstances");
-    Assert.assertNotNull(numInstancesEntry);
-    assertEquals(annotation, numInstancesEntry.getAnnotation());
+    assertThat(numInstancesEntry).isNotNull();
+    assertThat(numInstancesEntry.getAnnotation()).isEqualTo(annotation);
   }
 
   @Test
@@ -238,7 +236,7 @@ public class ModificationUserOperationLogTest {
     // when
     runtimeService.createModification(processDefinition.getId())
         .startAfterActivity("user1")
-        .processInstanceIds(Arrays.asList(processInstance.getId()))
+        .processInstanceIds(List.of(processInstance.getId()))
         .setAnnotation(annotation)
         .executeAsync();
 
@@ -248,16 +246,16 @@ public class ModificationUserOperationLogTest {
     List<UserOperationLogEntry> opLogEntries = historyService.createUserOperationLogQuery()
         .operationType(UserOperationLogEntry.OPERATION_TYPE_MODIFY_PROCESS_INSTANCE)
         .list();
-    assertEquals(2, opLogEntries.size());
+    assertThat(opLogEntries).hasSize(2);
     Map<String, UserOperationLogEntry> entries = asMap(opLogEntries);
 
     UserOperationLogEntry asyncEntry = entries.get("async");
-    Assert.assertNotNull(asyncEntry);
-    assertEquals(annotation, asyncEntry.getAnnotation());
+    assertThat(asyncEntry).isNotNull();
+    assertThat(asyncEntry.getAnnotation()).isEqualTo(annotation);
 
     UserOperationLogEntry numInstancesEntry = entries.get("nrOfInstances");
-    Assert.assertNotNull(numInstancesEntry);
-    assertEquals(annotation, numInstancesEntry.getAnnotation());
+    assertThat(numInstancesEntry).isNotNull();
+    assertThat(numInstancesEntry.getAnnotation()).isEqualTo(annotation);
   }
 
   @Test
@@ -283,9 +281,9 @@ public class ModificationUserOperationLogTest {
     List<UserOperationLogEntry> logs = historyService.createUserOperationLogQuery()
         .operationType(UserOperationLogEntry.OPERATION_TYPE_MODIFY_PROCESS_INSTANCE)
         .list();
-    assertEquals(1, logs.size());
+    assertThat(logs).hasSize(1);
 
-    assertEquals(annotation, logs.get(0).getAnnotation());
+    assertThat(logs.get(0).getAnnotation()).isEqualTo(annotation);
   }
 
   @Test
@@ -310,9 +308,9 @@ public class ModificationUserOperationLogTest {
     List<UserOperationLogEntry> logs = historyService.createUserOperationLogQuery()
         .operationType(UserOperationLogEntry.OPERATION_TYPE_MODIFY_PROCESS_INSTANCE)
         .list();
-    assertEquals(1, logs.size());
+    assertThat(logs).hasSize(1);
 
-    assertEquals(annotation, logs.get(0).getAnnotation());
+    assertThat(logs.get(0).getAnnotation()).isEqualTo(annotation);
   }
 
 
@@ -333,7 +331,7 @@ public class ModificationUserOperationLogTest {
 
     // then
     List<UserOperationLogEntry> logs = historyService.createUserOperationLogQuery().list();
-    assertEquals(1, logs.size());
+    assertThat(logs).hasSize(1);
 
     UserOperationLogEntry userOperationLogEntry = logs.get(0);
     assertThat(userOperationLogEntry.getEntityType()).isEqualTo("ProcessInstance");
@@ -347,7 +345,7 @@ public class ModificationUserOperationLogTest {
 
       UserOperationLogEntry previousValue = map.put(entry.getProperty(), entry);
       if (previousValue != null) {
-        Assert.fail("expected only entry for every property");
+        fail("expected only entry for every property");
       }
     }
 
