@@ -36,7 +36,6 @@ import org.operaton.bpm.model.bpmn.Bpmn;
 import org.operaton.bpm.model.bpmn.BpmnModelInstance;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Date;
 import java.util.List;
 
@@ -44,11 +43,7 @@ import org.joda.time.DateTime;
 import org.junit.*;
 import org.junit.rules.RuleChain;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
+import static org.assertj.core.api.Assertions.*;
 
 /**
  * @author Sebastian Menski
@@ -88,7 +83,7 @@ public class TaskQueryExpressionTest {
     anotherUser = createUser("anotherUser", group3.getId());
     userWithoutGroups = createUser("userWithoutGroups");
 
-    setTime(1427547759000l);
+    setTime(1427547759000L);
     testTask = createTestTask("task");
     // shift time to force distinguishable create times
     adjustTime(2 * 60);
@@ -192,8 +187,9 @@ public class TaskQueryExpressionTest {
     assertCount(taskQuery().taskCandidateGroupInExpression("${currentUserGroups()}"), 0);
 
     setCurrentUser(userWithoutGroups);
+    var taskQuery = taskQuery().taskCandidateGroupInExpression("${currentUserGroups()}");
     try {
-      taskQuery().taskCandidateGroupInExpression("${currentUserGroups()}").count();
+      taskQuery.count();
       fail("Exception expected");
     }
     catch (ProcessEngineException e) {
@@ -441,21 +437,21 @@ public class TaskQueryExpressionTest {
     // execute query so expression will be evaluated
     taskQuery.count();
 
-    assertEquals(expressionString, taskQuery.getAssignee());
-    assertEquals(expressionString, taskQuery.getAssigneeLike());
-    assertEquals(expressionString, taskQuery.getOwner());
-    assertEquals(expressionString, taskQuery.getInvolvedUser());
-    assertTrue(taskQuery.getCreateTimeBefore().after(queryDate));
-    assertTrue(taskQuery.getCreateTime().after(queryDate));
-    assertTrue(taskQuery.getCreateTimeAfter().after(queryDate));
-    assertTrue(taskQuery.getDueBefore().after(queryDate));
-    assertTrue(taskQuery.getDueDate().after(queryDate));
-    assertTrue(taskQuery.getDueAfter().after(queryDate));
-    assertTrue(taskQuery.getFollowUpBefore().after(queryDate));
-    assertTrue(taskQuery.getFollowUpDate().after(queryDate));
-    assertTrue(taskQuery.getFollowUpAfter().after(queryDate));
+    assertThat(taskQuery.getAssignee()).isEqualTo(expressionString);
+    assertThat(taskQuery.getAssigneeLike()).isEqualTo(expressionString);
+    assertThat(taskQuery.getOwner()).isEqualTo(expressionString);
+    assertThat(taskQuery.getInvolvedUser()).isEqualTo(expressionString);
+    assertThat(taskQuery.getCreateTimeBefore().after(queryDate)).isTrue();
+    assertThat(taskQuery.getCreateTime().after(queryDate)).isTrue();
+    assertThat(taskQuery.getCreateTimeAfter().after(queryDate)).isTrue();
+    assertThat(taskQuery.getDueBefore().after(queryDate)).isTrue();
+    assertThat(taskQuery.getDueDate().after(queryDate)).isTrue();
+    assertThat(taskQuery.getDueAfter().after(queryDate)).isTrue();
+    assertThat(taskQuery.getFollowUpBefore().after(queryDate)).isTrue();
+    assertThat(taskQuery.getFollowUpDate().after(queryDate)).isTrue();
+    assertThat(taskQuery.getFollowUpAfter().after(queryDate)).isTrue();
 
-    // candidates has to be tested separately cause they have to be set exclusively
+    // candidates has to be tested separately because they have to be set exclusively
 
     taskQuery = (TaskQueryImpl) taskQuery()
       .taskCandidateGroup(queryString)
@@ -464,7 +460,7 @@ public class TaskQueryExpressionTest {
     // execute query so expression will be evaluated
     taskQuery.count();
 
-    assertEquals(expressionString, taskQuery.getCandidateGroup());
+    assertThat(taskQuery.getCandidateGroup()).isEqualTo(expressionString);
 
     taskQuery = (TaskQueryImpl) taskQuery()
       .taskCandidateUser(queryString)
@@ -473,10 +469,10 @@ public class TaskQueryExpressionTest {
     // execute query so expression will be evaluated
     taskQuery.count();
 
-    assertEquals(expressionString, taskQuery.getCandidateUser());
+    assertThat(taskQuery.getCandidateUser()).isEqualTo(expressionString);
 
     setCurrentUser(testUser);
-    List<String> queryList = Arrays.asList("query");
+    List<String> queryList = List.of("query");
     String testGroupsExpression = "${currentUserGroups()}";
 
     taskQuery = (TaskQueryImpl) taskQuery()
@@ -486,7 +482,7 @@ public class TaskQueryExpressionTest {
     // execute query so expression will be evaluated
     taskQuery.count();
 
-    assertEquals(2, taskQuery.getCandidateGroups().size());
+    assertThat(taskQuery.getCandidateGroups()).hasSize(2);
   }
 
   @Test
@@ -537,17 +533,17 @@ public class TaskQueryExpressionTest {
       .isEqualTo(taskQuery.getOwner())
       .isEqualTo(taskQuery.getInvolvedUser());
     assertThat(taskQuery.getUpdatedAfter()).isEqualTo(queryDate);
-    assertThat(taskQuery.getCreateTimeBefore().equals(queryDate));
-    assertThat(taskQuery.getCreateTime().equals(queryDate));
-    assertThat(taskQuery.getCreateTimeAfter().equals(queryDate));
-    assertThat(taskQuery.getDueBefore().equals(queryDate));
-    assertThat(taskQuery.getDueDate().equals(queryDate));
-    assertThat(taskQuery.getDueAfter().equals(queryDate));
-    assertThat(taskQuery.getFollowUpBefore().equals(queryDate));
-    assertThat(taskQuery.getFollowUpDate().equals(queryDate));
-    assertThat(taskQuery.getFollowUpAfter().equals(queryDate));
+    assertThat(taskQuery.getCreateTimeBefore()).isEqualTo(queryDate);
+    assertThat(taskQuery.getCreateTime()).isEqualTo(queryDate);
+    assertThat(taskQuery.getCreateTimeAfter()).isEqualTo(queryDate);
+    assertThat(taskQuery.getDueBefore()).isEqualTo(queryDate);
+    assertThat(taskQuery.getDueDate()).isEqualTo(queryDate);
+    assertThat(taskQuery.getDueAfter()).isEqualTo(queryDate);
+    assertThat(taskQuery.getFollowUpBefore()).isEqualTo(queryDate);
+    assertThat(taskQuery.getFollowUpDate()).isEqualTo(queryDate);
+    assertThat(taskQuery.getFollowUpAfter()).isEqualTo(queryDate);
 
-    // candidates has to be tested separately cause they have to be set exclusively
+    // candidates has to be tested separately because they have to be set exclusively
 
     taskQuery = (TaskQueryImpl) taskQuery()
       .taskCandidateGroupExpression(testStringExpression)
@@ -568,7 +564,7 @@ public class TaskQueryExpressionTest {
     assertThat(queryString).isEqualTo(taskQuery.getCandidateUser());
 
     setCurrentUser(testUser);
-    List<String> queryList = Arrays.asList("query");
+    List<String> queryList = List.of("query");
     String testGroupsExpression = "${currentUserGroups()}";
 
     taskQuery = (TaskQueryImpl) taskQuery()
@@ -621,47 +617,53 @@ public class TaskQueryExpressionTest {
       .list();
 
     // then
-    assertEquals(2, tasks.size());
+    assertThat(tasks).hasSize(2);
   }
 
   @Test
   public void shouldRejectDueDateExpressionAndWithoutDueDateCombination() {
-    assertThatThrownBy(() -> taskService.createTaskQuery().dueDateExpression("").withoutDueDate())
+    var taskQuery = taskService.createTaskQuery().dueDateExpression("");
+    assertThatThrownBy(taskQuery::withoutDueDate)
       .isInstanceOf(ProcessEngineException.class)
       .hasMessageContaining("Invalid query usage");
   }
 
   @Test
   public void shouldRejectWithoutDueDateAndDueDateExpressionCombination() {
-    assertThatThrownBy(() -> taskService.createTaskQuery().withoutDueDate().dueDateExpression(""))
+    var taskQuery = taskService.createTaskQuery().withoutDueDate();
+    assertThatThrownBy(() -> taskQuery.dueDateExpression(""))
       .isInstanceOf(ProcessEngineException.class)
       .hasMessageContaining("Invalid query usage");
   }
 
   @Test
   public void shouldRejectDueAfterExpressionAndWithoutDueDateCombination() {
-    assertThatThrownBy(() -> taskService.createTaskQuery().dueAfterExpression("").withoutDueDate())
+    var taskQuery = taskService.createTaskQuery().dueAfterExpression("");
+    assertThatThrownBy(taskQuery::withoutDueDate)
       .isInstanceOf(ProcessEngineException.class)
       .hasMessageContaining("Invalid query usage");
   }
 
   @Test
   public void shouldRejectWithoutDueDateAndDueAfterExpressionCombination() {
-    assertThatThrownBy(() -> taskService.createTaskQuery().withoutDueDate().dueAfterExpression(""))
+    var taskQuery = taskService.createTaskQuery().withoutDueDate();
+    assertThatThrownBy(() -> taskQuery.dueAfterExpression(""))
       .isInstanceOf(ProcessEngineException.class)
       .hasMessageContaining("Invalid query usage");
   }
 
   @Test
   public void shouldRejectDueBeforeExpressionAndWithoutDueDateCombination() {
-    assertThatThrownBy(() -> taskService.createTaskQuery().dueBeforeExpression("").withoutDueDate())
+    var taskQuery = taskService.createTaskQuery().dueBeforeExpression("");
+    assertThatThrownBy(taskQuery::withoutDueDate)
       .isInstanceOf(ProcessEngineException.class)
       .hasMessageContaining("Invalid query usage");
   }
 
   @Test
   public void shouldRejectWithoutDueDateAndDueBeforeExpressionCombination() {
-    assertThatThrownBy(() -> taskService.createTaskQuery().withoutDueDate().dueBeforeExpression(""))
+    var taskQuery = taskService.createTaskQuery().withoutDueDate();
+    assertThatThrownBy(() -> taskQuery.dueBeforeExpression(""))
       .isInstanceOf(ProcessEngineException.class)
       .hasMessageContaining("Invalid query usage");
   }
@@ -691,7 +693,7 @@ public class TaskQueryExpressionTest {
   }
 
   protected void assertCount(Query query, long count) {
-    assertEquals(count, query.count());
+    assertThat(query.count()).isEqualTo(count);
   }
 
   protected void setCurrentUser(User user) {
