@@ -18,7 +18,6 @@ package org.operaton.bpm.engine.test.api.variables.scope;
 
 import static org.operaton.bpm.engine.test.api.runtime.migration.ModifiableBpmnModelInstance.modify;
 
-import java.util.Arrays;
 import java.util.List;
 
 import org.operaton.bpm.engine.ProcessEngineException;
@@ -45,6 +44,7 @@ import org.junit.Rule;
 import org.junit.Test;
 
 import static org.assertj.core.api.Assertions.*;
+import static org.assertj.core.api.Assertions.assertThatCode;
 
 /**
  * @author Askar Akhmerov
@@ -67,8 +67,8 @@ public class TargetVariableScopeTest {
   @Deployment(resources = {"org/operaton/bpm/engine/test/api/variables/scope/TargetVariableScopeTest.testExecutionWithDelegateProcess.bpmn","org/operaton/bpm/engine/test/api/variables/scope/doer.bpmn"})
   public void testExecutionWithDelegateProcess() {
     // Given we create a new process instance
-    VariableMap variables = Variables.createVariables().putValue("orderIds", Arrays.asList(new int[]{1, 2, 3}));
-    ProcessInstance processInstance = engineRule.getRuntimeService().startProcessInstanceByKey("Process_MultiInstanceCallAcitivity",variables);
+    VariableMap variables = Variables.createVariables().putValue("orderIds", List.of(new int[] { 1, 2, 3 }));
+    ProcessInstance processInstance = runtimeService.startProcessInstanceByKey("Process_MultiInstanceCallActivity",variables);
 
     // it runs without any problems
     assertThat(processInstance.isEnded()).isTrue();
@@ -78,8 +78,8 @@ public class TargetVariableScopeTest {
   @Test
   @Deployment(resources = {"org/operaton/bpm/engine/test/api/variables/scope/TargetVariableScopeTest.testExecutionWithScriptTargetScope.bpmn","org/operaton/bpm/engine/test/api/variables/scope/doer.bpmn"})
   public void testExecutionWithScriptTargetScope () {
-    VariableMap variables = Variables.createVariables().putValue("orderIds", Arrays.asList(new int[]{1, 2, 3}));
-    ProcessInstance processInstance = engineRule.getRuntimeService().startProcessInstanceByKey("Process_MultiInstanceCallAcitivity",variables);
+    VariableMap variables = Variables.createVariables().putValue("orderIds", List.of(new int[] { 1, 2, 3 }));
+    ProcessInstance processInstance = runtimeService.startProcessInstanceByKey("Process_MultiInstanceCallActivity",variables);
 
     // it runs without any problems
     assertThat(processInstance.isEnded()).isTrue();
@@ -89,12 +89,13 @@ public class TargetVariableScopeTest {
   @Test
   @Deployment(resources = {"org/operaton/bpm/engine/test/api/variables/scope/TargetVariableScopeTest.testExecutionWithoutProperTargetScope.bpmn","org/operaton/bpm/engine/test/api/variables/scope/doer.bpmn"})
   public void testExecutionWithoutProperTargetScope () {
-    VariableMap variables = Variables.createVariables().putValue("orderIds", Arrays.asList(new int[]{1, 2, 3}));
-    ProcessDefinition processDefinition = engineRule.getRepositoryService().createProcessDefinitionQuery().processDefinitionKey("Process_MultiInstanceCallAcitivity").singleResult();
+    VariableMap variables = Variables.createVariables().putValue("orderIds", List.of(new int[] { 1, 2, 3 }));
+    ProcessDefinition processDefinition = engineRule.getRepositoryService().createProcessDefinitionQuery().processDefinitionKey("Process_MultiInstanceCallActivity").singleResult();
+    RuntimeService runtimeService1 = runtimeService;
 
     // when/then
     //fails due to inappropriate variable scope target
-    assertThatThrownBy(() -> engineRule.getRuntimeService().startProcessInstanceByKey("Process_MultiInstanceCallAcitivity",variables))
+    assertThatThrownBy(() -> runtimeService1.startProcessInstanceByKey("Process_MultiInstanceCallActivity",variables))
       .isInstanceOf(ScriptEvaluationException.class)
       .hasMessageContaining("Unable to evaluate script while executing activity 'CallActivity_1' in the process definition with id '"
           + processDefinition.getId() + "': org.operaton.bpm.engine.ProcessEngineException: ENGINE-20011 "
@@ -167,12 +168,13 @@ public class TargetVariableScopeTest {
         .done();
 
     ProcessDefinition processDefinition = testHelper.deployAndGetDefinition(instance);
+    String processDefinitionId = processDefinition.getId();
 
-    VariableMap variables = Variables.createVariables().putValue("orderIds", Arrays.asList(new int[]{1, 2, 3}));
+    VariableMap variables = Variables.createVariables().putValue("orderIds", List.of(new int[] { 1, 2, 3 }));
 
     // when/then
     //fails due to inappropriate variable scope target
-    assertThatThrownBy(() -> engineRule.getRuntimeService().startProcessInstanceById(processDefinition.getId(),variables))
+    assertThatThrownBy(() -> runtimeService.startProcessInstanceById(processDefinitionId, variables))
       .isInstanceOf(ProcessEngineException.class)
       .hasMessageContaining("org.operaton.bpm.engine.ProcessEngineException: ENGINE-20011 Scope with specified activity Id SubProcess_2 and execution");
 
@@ -218,7 +220,7 @@ public class TargetVariableScopeTest {
       .endEvent()
       .done());
 
-    engineRule.getRuntimeService().startProcessInstanceByKey("process");
+    assertThatCode(() -> runtimeService.startProcessInstanceByKey("process")).doesNotThrowAnyException();
   }
 
   @Test
@@ -229,7 +231,7 @@ public class TargetVariableScopeTest {
       .endEvent()
       .done());
 
-    engineRule.getRuntimeService().startProcessInstanceByKey("process");
+    assertThatCode(() -> runtimeService.startProcessInstanceByKey("process")).doesNotThrowAnyException();
   }
 
   @Test
@@ -240,7 +242,7 @@ public class TargetVariableScopeTest {
         .operatonExecutionListenerClass(ExecutionListener.EVENTNAME_END, ExecutionListener.class)
       .done());
 
-    engineRule.getRuntimeService().startProcessInstanceByKey("process");
+    assertThatCode(() -> runtimeService.startProcessInstanceByKey("process")).doesNotThrowAnyException();
   }
 
   @Test
@@ -257,7 +259,7 @@ public class TargetVariableScopeTest {
     modelInstance.<SequenceFlow>getModelElementById("sequenceFlow").builder().addExtensionElement(listener);
 
     testHelper.deploy(modelInstance);
-    engineRule.getRuntimeService().startProcessInstanceByKey("process");
+    assertThatCode(() -> runtimeService.startProcessInstanceByKey("process")).doesNotThrowAnyException();
   }
 
   @Test
@@ -269,7 +271,7 @@ public class TargetVariableScopeTest {
       .endEvent()
       .done());
 
-    engineRule.getRuntimeService().startProcessInstanceByKey("process");
+    assertThatCode(() -> runtimeService.startProcessInstanceByKey("process")).doesNotThrowAnyException();
   }
 
   @Test
@@ -285,7 +287,7 @@ public class TargetVariableScopeTest {
       .endEvent()
       .done());
 
-    engineRule.getRuntimeService().startProcessInstanceByKey("process");
+    assertThatCode(() -> runtimeService.startProcessInstanceByKey("process")).doesNotThrowAnyException();
   }
 
   @Test
@@ -300,7 +302,7 @@ public class TargetVariableScopeTest {
       .endEvent()
       .done());
 
-    engineRule.getRuntimeService().startProcessInstanceByKey("process");
+    assertThatCode(() -> runtimeService.startProcessInstanceByKey("process")).doesNotThrowAnyException();
   }
 
   @Test
@@ -315,7 +317,7 @@ public class TargetVariableScopeTest {
       .endEvent()
       .done());
 
-    engineRule.getRuntimeService().startProcessInstanceByKey("process");
+    assertThatCode(() -> runtimeService.startProcessInstanceByKey("process")).doesNotThrowAnyException();
   }
 
   @Test
@@ -331,7 +333,7 @@ public class TargetVariableScopeTest {
       .endEvent()
       .done());
 
-    engineRule.getRuntimeService().startProcessInstanceByKey("process");
+    assertThatCode(() -> runtimeService.startProcessInstanceByKey("process")).doesNotThrowAnyException();
   }
 
 }
