@@ -21,11 +21,11 @@ import static org.assertj.core.api.Assertions.assertThat;
 import java.util.Collection;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.RegisterExtension;
+import org.operaton.bpm.engine.test.junit5.ProcessEngineLoggingExtension;
 import org.operaton.bpm.spring.boot.starter.security.oauth2.AbstractSpringSecurityIT;
-import org.operaton.commons.testing.ProcessEngineLoggingRule;
-import org.junit.Rule;
-import org.junit.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -33,18 +33,19 @@ import org.springframework.security.oauth2.core.user.OAuth2UserAuthority;
 import org.springframework.test.context.TestPropertySource;
 
 @TestPropertySource("/oauth2-mock.properties")
-public class OAuth2GrantedAuthoritiesMapperIT extends AbstractSpringSecurityIT {
+class OAuth2GrantedAuthoritiesMapperIT extends AbstractSpringSecurityIT {
 
   protected static final String GROUP_NAME_ATTRIBUTE = "groupName";
 
   @Autowired
   private OAuth2GrantedAuthoritiesMapper authoritiesMapper;
 
-  @Rule
-  public ProcessEngineLoggingRule loggingRule = new ProcessEngineLoggingRule().watch(OAuth2GrantedAuthoritiesMapper.class.getCanonicalName());
+  @RegisterExtension
+  ProcessEngineLoggingExtension logger = new ProcessEngineLoggingExtension()
+      .watch(OAuth2GrantedAuthoritiesMapper.class.getCanonicalName());
 
   @Test
-  public void testMappingNotOauth2Authorities() {
+  void testMappingNotOauth2Authorities() {
     // given
     List<GrantedAuthority> authorities = List.of(new SimpleGrantedAuthority("USER"));
     // when
@@ -54,7 +55,7 @@ public class OAuth2GrantedAuthoritiesMapperIT extends AbstractSpringSecurityIT {
   }
 
   @Test
-  public void testMappingGroupNotAvailable() {
+  void testMappingGroupNotAvailable() {
     // given
     List<GrantedAuthority> authorities = List.of(new OAuth2UserAuthority("USER", Map.of("name", "name")));
     // when
@@ -62,11 +63,11 @@ public class OAuth2GrantedAuthoritiesMapperIT extends AbstractSpringSecurityIT {
     // then
     assertThat(mappedAuthorities).isEmpty();
     String expectedWarn = "Attribute " + GROUP_NAME_ATTRIBUTE + " is not available";
-    assertThat(loggingRule.getFilteredLog(expectedWarn)).hasSize(1);
+    assertThat(logger.getFilteredLog(expectedWarn)).hasSize(1);
   }
 
   @Test
-  public void testMappingSingleAuthority() {
+  void testMappingSingleAuthority() {
     // given
     List<GrantedAuthority> authorities = List.of(new OAuth2UserAuthority("USER", Map.of(GROUP_NAME_ATTRIBUTE, "group")));
     // when
@@ -77,20 +78,20 @@ public class OAuth2GrantedAuthoritiesMapperIT extends AbstractSpringSecurityIT {
   }
 
   @Test
-  public void testMappingMultipleAuthorities() {
+  void testMappingMultipleAuthorities() {
     // given
     List<GrantedAuthority> authorities = List.of(new OAuth2UserAuthority("USER", Map.of(GROUP_NAME_ATTRIBUTE, List.of("group1", "group2"))));
     // when
     Collection<? extends GrantedAuthority> mappedAuthorities = authoritiesMapper.mapAuthorities(authorities);
     // then
     assertThat(mappedAuthorities).hasSize(2);
-    List<String> groups = mappedAuthorities.stream().map(GrantedAuthority::getAuthority).collect(Collectors.toList());
+    List<String> groups = mappedAuthorities.stream().map(GrantedAuthority::getAuthority).toList();
     assertThat(groups).contains("group1", "group2");
   }
 
 
   @Test
-  public void testMappingUnsupportedType() {
+  void testMappingUnsupportedType() {
     // given
     Object object = new Object();
     List<GrantedAuthority> authorities = List.of(new OAuth2UserAuthority("USER", Map.of(GROUP_NAME_ATTRIBUTE, object)));
@@ -99,7 +100,7 @@ public class OAuth2GrantedAuthoritiesMapperIT extends AbstractSpringSecurityIT {
     // then
     assertThat(mappedAuthorities).isEmpty();
     String expectedError = "Could not map granted authorities, unsupported group attribute type: " + object.getClass();
-    assertThat(loggingRule.getFilteredLog(expectedError)).hasSize(1);
+    assertThat(logger.getFilteredLog(expectedError)).hasSize(1);
   }
 
 
